--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,55 @@
-selenium~=4.11.2
-dataclasses~=0.6
-pytest~=7.3.1
-h11~=0.14.0
-pip~=23.2.1
-attrs~=23.1.0
-distro~=1.8.0
-cryptography~=41.0.1
-Pillow~=9.5.0
-tornado~=6.3.2
-Jinja2~=3.1.2
-trio~=0.22.2
-outcome~=1.2.0
-sniffio~=1.3.0
-exceptiongroup~=1.1.3
-ipython~=8.14.0
-coverage~=7.2.7
-sortedcontainers~=2.4.0
-cffi~=1.15.1
-idna~=3.4
-certifi~=2023.7.22
-urllib3~=2.0.4
-ply~=3.11
-pycparser~=2.21
-setuptools~=68.0.0
-packaging~=23.1
-pyparsing~=3.1.0
-wsproto~=1.2.0
-pytz~=2023.3.post1
+asttokens==2.4.0
+attrs==23.1.0
+backcall==0.2.0
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.3.0
+colorama==0.4.6
+coverage==7.2.7
+cryptography==41.0.4
+dataclasses==0.6
+decorator==5.1.1
+distro==1.8.0
+exceptiongroup==1.1.3
+executing==1.2.0
+h11==0.14.0
+idna==3.4
+iniconfig==2.0.0
+ipython==8.14.0
+jedi==0.19.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+outcome==1.2.0
+packaging==23.1
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+pluggy==1.3.0
+ply==3.11
+prompt-toolkit==3.0.39
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.16.1
+pyparsing==3.1.1
+pyperclip==1.8.2
+PySocks==1.7.1
+pytest==7.3.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+selenium==4.11.2
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+stack-data==0.6.2
+tabulate==0.9.0
+tomli==2.0.1
+tornado==6.3.3
+traitlets==5.10.1
+trio==0.22.2
+trio-websocket==0.11.1
+urllib3==2.0.5
+wcwidth==0.2.6
+webdriver-manager==4.0.1
+wsproto==1.2.0
