--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,7 @@ __pycache__/
 .ipynb_checkpoints/
 
 # Storage files
-replied_tweets.json
-credentials.json
-chrome_profile.txt
+sessions/**/*
 
 # Temporary files
 gitpull.log
